--- a/_includes/head.html
+++ b/_includes/head.html
@@ -7,6 +7,8 @@
 
 	<title>{{ page.title }} Uli Fahrer - CS Student and Developer.</title>
 
+	<link rel="shortcut icon" href="/img/sys-command.ico">
+
 	<!-- STYLES -->
 	<link href="/css/bootstrap.css" rel="stylesheet">
     <link href="/css/font-awesome.css" rel="stylesheet">
