styled blog post list

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -31,7 +31,7 @@ layout: default
 
     <div class="col-md-12">
         <h2>Read More Recent Posts </h2>
-        <ul class="list-unstyled icon-list mark">
+        <ul class="list-unstyled icon-list square-mark">
             {% for post in site.posts limit:3 %}
                 {% if post.title != page.title %}
                          <li>
