--- a/css/style.css
+++ b/css/style.css
@@ -69,19 +69,16 @@ dt, dd { margin-top: 10px; }
 	margin-left: 10px;
 }
 
-/* Pure CSS Post Tags */
-
-.post{
-	position:relative;
-	padding:10px 20px;
-	background:#f8f8f8;
-	-moz-border-radius:10px;
-	-webkit-border-radius:10px;
-	border-radius:10px;
-	width:450px;
-	border:1px solid #e8e8e8;
-	margin-bottom:20px;
+.box {
+    position:relative;
+    height: 8.5em;
+    border-radius: 3px;
+    box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.16), 0 2px 10px 0 rgba(0, 0, 0, 0.12);
+    padding: 15px 20px;
+    display: block;
+    margin-top: 3px;
 }
+
 .tags{
 	margin:0;
 	padding:0;
@@ -219,6 +216,6 @@ p { margin: 1.2em 0; }
 	font-size:80%
 }
 
-.mark li:before {
+.square-mark li:before {
 	content: '\e074';
 }
