--- a/_layouts/tag-page.html
+++ b/_layouts/tag-page.html
@@ -28,7 +28,7 @@ layout: blog-overview
                 </div>
                 <div class="row">
                     <div class="col-md-6">
-                        <p><a class="btn btn-primary" href="#">Read more</a></p>
+                        <p><a class="btn btn-primary" href="{{ post.url }}">Read more</a></p>
                     </div>
                     <div class="col-md-6">
                         <p></p>
