--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -12,7 +12,7 @@ layout: default
             <h2>About the Author</h2>
             <div class="media">
                 <a class="pull-left" href="#">
-                    <img class="media-object dp img-circle" src="/img/me_thumbnail.jpg" style="width: 100px;height:100px;">
+                    <img class="img-circle dp" src="/img/me_thumbnail.jpg">
                 </a>
                 <div class="media-body">
                     <h4 class="media-heading">Uli Fahrer <small> Germany</small></h4>
