--- a/_includes/header.html
+++ b/_includes/header.html
@@ -2,7 +2,7 @@
 	<div class="row">
 		<div class="col-md-12">
 			<ul class="main-navigation nav nav-pills">
-				<li class="current-menu-item"><a href="/">Home</a></li>
+				<li class="current-menu-item"><a href="/"><i class="fa fa-code"></i> Home</a></li>
 				<li class="{{ page.publications }}"><a href="/publications" title="Publications">Publications</a></li>
 				<li class="{{ page.projects }}"><a href="/projects" title="Projects">Projects</a></li>
 				<li class="{{ page.blog }}"><a href="/blog" title="Projects">Blog</a></li>
