change website font

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -19,14 +19,10 @@ layout: default
                     <h5>CS Student <a href="http://www.tu-darmstadt.de">TU Darmstadt</a></h5>
                     <hr style="margin:8px auto">
 
-                    <span class="label label-default">Software Development</span>
-                    <span class="label label-default">NLP</span>
-                    <span class="label label-info">Machine Learning</span>
-                    <span class="label label-default">Ebass</span>
+                    <span>Software Development, NLP, Machine Learning, Ebass </span>
                 </div>
             </div>
         </div>
-
 
         <div class="col-md-12">
             <h2>Read More Recent Posts</h2>
