Fix mobile issues

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -51,7 +51,7 @@ layout: default
         {% if page.comments %}
             <div class="col-md-12">
                 <h2>Comments Section</h2>
-                <p>Feel free to comment on the post but keep it clean and on topic.</p>
+                <p>Feel free to comment on the post. But keep it clean and on topic.</p>
                 {% include disqus.html %}
             </div>
         {% endif %}
