--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -24,9 +24,23 @@ layout: default
             </div>
         </div>
 
+
         <div class="col-md-12">
+            <div class="share-page">
+                Share this on &rarr;
+                <a href="https://twitter.com/intent/tweet?text={{ page.title }}&url={{ site.url }}{{ page.url }}&via={{ site.twitter_username }}&related={{ site.twitter_username }}" rel="nofollow" target="_blank" title="Share on Twitter">Twitter</a>
+                <a href="https://facebook.com/sharer.php?u={{ site.url }}{{ page.url }}" rel="nofollow" target="_blank" title="Share on Facebook">Facebook</a>
+                <a href="https://plus.google.com/share?url={{ site.url }}{{ page.url }}" rel="nofollow" target="_blank" title="Share on Google+">Google+</a>
+            </div>            
+        </div>
+
+    <div class="col-md-12 col-xs-12">
+        <p class="pull-right">{% if page.previous.url %} <a href="{{page.previous.url}}" title="Previous Post: {{page.previous.title}}">&laquo; Previous Blog Post</a>  {% endif %}  |  <a href="#">Back to top</a>  |  {% if page.next.url %}  <a href="{{page.next.url}}" title="Next Post: {{page.next.title}}">Next Blog Post &raquo; </a>  {% endif %} </p>
+    </div>
+
+        <div class="col-md-12 col-xs-12">
             <h2>Read More Recent Posts</h2>
-            <ul class="list-unstyled icon-list square-mark">
+            <ul class="list-unstyled square-mark">
                 {% for post in site.posts limit:3 %}
                     {% if post.title != page.title %}
                     <li>
@@ -35,17 +49,6 @@ layout: default
                     {% endif %}
                 {% endfor %}
             </ul>
-        </div>
-
-        <div class="col-md-12">
-            <div class="share-page">
-                Share this on &rarr;
-                <a href="https://twitter.com/intent/tweet?text={{ page.title }}&url={{ site.url }}{{ page.url }}&via={{ site.twitter_username }}&related={{ site.twitter_username }}" rel="nofollow" target="_blank" title="Share on Twitter">Twitter</a>
-                <a href="https://facebook.com/sharer.php?u={{ site.url }}{{ page.url }}" rel="nofollow" target="_blank" title="Share on Facebook">Facebook</a>
-                <a href="https://plus.google.com/share?url={{ site.url }}{{ page.url }}" rel="nofollow" target="_blank" title="Share on Google+">Google+</a>
-            </div>
-            <br/>
-            <p class="pull-right">{% if page.previous.url %} <a href="{{page.previous.url}}" title="Previous Post: {{page.previous.title}}">&laquo; Previous Blog Post</a> 	{% endif %}  |  <a href="#">Back to top</a>  |  {% if page.next.url %} 	<a href="{{page.next.url}}" title="Next Post: {{page.next.title}}">Next Blog Post &raquo; </a> 	{% endif %} </p>
         </div>
 
         {% if page.comments %}
