--- a/_layouts/tag-page.html
+++ b/_layouts/tag-page.html
@@ -4,12 +4,16 @@ layout: blog-overview
 
 <h2>{{page.title}}</h2>
 {% for post in site.tags.[page.tag] %}
-    <div class="row">
+    <div class="row blog-section">
         <div class="col-md-12 hidden-xs hidden-sm">
-            <h3><strong><a href="{{ post.url }}">{{ post.title }}</a></strong></h3>
+            <h3>
+                <strong><a href="{{ post.url }}">{{ post.title }}</a></strong>
+            </h3>
+            <i class="fa fa-calendar"></i> {{ post.date | date: "%B %e, %Y" }}
+
             <div class="box">
                 <p>
-                    {{ post.summary }}
+                    {{ post.summary }} <a href="{{ post.url }}">Read more</a>
                 </p>
                 <ul class="tags">
                     {% for tag in post.tags %}
@@ -19,16 +23,6 @@ layout: blog-overview
                     {% endfor %}
                 </ul>
             </div>
-            <div class="row">
-                <div class="col-md-6">
-                    <p><a class="btn btn-primary" href="{{ post.url }}">Read more</a></p>
-                </div>
-                <div class="col-md-6">
-                    <p></p>
-                    <p class="pull-right"><i class="fa fa-calendar"></i> {{ post.date | date: "%B %e, %Y" }}
-                        | <i class="fa fa-comments"></i> <a href="{{ site.url }}{{ post.url }}#disqus_thread"></a></p>
-                </div>
-            </div>
         </div>
 
 
@@ -36,5 +30,5 @@ layout: blog-overview
             <h3><strong><a href="{{ post.url }}">{{ post.title }}</a></strong></h3>
         </div>
     </div>
-    <hr class="style-two">
+    <div class="hrline"></div>
 {% endfor %}
