simplified project page

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -4,7 +4,7 @@
 			<ul class="main-navigation nav nav-pills">
 				<li class="current-menu-item"><a href="/"><i class="fa fa-code"></i> Home</a></li>
 				<li class="{{ page.publications }}"><a href="/publications" title="Publications">Publications</a></li>
-				<!--<li class="{{ page.projects }}"><a href="/projects" title="Projects">Projects</a></li>-->
+				<li class="{{ page.projects }}"><a href="/projects" title="Projects">Projects</a></li>
 				<li class="{{ page.blog }}"><a href="/blog" title="Projects">Blog</a></li>
 			</ul>
 		</div>
