Add software and data section

--- a/css/style.css
+++ b/css/style.css
@@ -105,6 +105,14 @@ dd { margin-top: 10px;}
 .site-footer > .row { border-top: 1px solid #eee; }
 
 
+/* Software TOC */
+#toc {
+	list-style: none;
+	margin-bottom: 20px;
+}
+
+
+
 /* ==========================================================================
    2. Blog
    ========================================================================== */
