--- a/_includes/head.html
+++ b/_includes/head.html
@@ -12,7 +12,7 @@
 	<!-- STYLES -->
 	<link href="/css/bootstrap.css" rel="stylesheet">
     <link href="/css/font-awesome.css" rel="stylesheet">
-    <link href="/css/pygments.css" rel="stylesheet">
+    <link href="/css/syntax.css" rel="stylesheet">
 	<link href="/css/style.css" rel="stylesheet">
 
 	<!-- HTML5 shim and Respond.js IE8 support of HTML5 elements and media queries -->
