--- a/css/syntax.css
+++ b/css/syntax.css
@@ -1,61 +1,65 @@
-.codehilite .hll { background-color: #ffffcc }
-.codehilite .c { color: #999988; font-style: italic } /* Comment */
-.codehilite .err { color: #a61717; background-color: #e3d2d2 } /* Error */
-.codehilite .k { color: #000000; font-weight: bold } /* Keyword */
-.codehilite .o { color: #000000; font-weight: bold } /* Operator */
-.codehilite .cm { color: #999988; font-style: italic } /* Comment.Multiline */
-.codehilite .cp { color: #999999; font-weight: bold; font-style: italic } /* Comment.Preproc */
-.codehilite .c1 { color: #999988; font-style: italic } /* Comment.Single */
-.codehilite .cs { color: #999999; font-weight: bold; font-style: italic } /* Comment.Special */
-.codehilite .gd { color: #000000; background-color: #ffdddd } /* Generic.Deleted */
-.codehilite .ge { color: #000000; font-style: italic } /* Generic.Emph */
-.codehilite .gr { color: #aa0000 } /* Generic.Error */
-.codehilite .gh { color: #999999 } /* Generic.Heading */
-.codehilite .gi { color: #000000; background-color: #ddffdd } /* Generic.Inserted */
-.codehilite .go { color: #888888 } /* Generic.Output */
-.codehilite .gp { color: #555555 } /* Generic.Prompt */
-.codehilite .gs { font-weight: bold } /* Generic.Strong */
-.codehilite .gu { color: #aaaaaa } /* Generic.Subheading */
-.codehilite .gt { color: #aa0000 } /* Generic.Traceback */
-.codehilite .kc { color: #000000; font-weight: bold } /* Keyword.Constant */
-.codehilite .kd { color: #000000; font-weight: bold } /* Keyword.Declaration */
-.codehilite .kn { color: #000000; font-weight: bold } /* Keyword.Namespace */
-.codehilite .kp { color: #000000; font-weight: bold } /* Keyword.Pseudo */
-.codehilite .kr { color: #000000; font-weight: bold } /* Keyword.Reserved */
-.codehilite .kt { color: #445588; font-weight: bold } /* Keyword.Type */
-.codehilite .m { color: #009999 } /* Literal.Number */
-.codehilite .s { color: #d01040 } /* Literal.String */
-.codehilite .na { color: #008080 } /* Name.Attribute */
-.codehilite .nb { color: #0086B3 } /* Name.Builtin */
-.codehilite .nc { color: #445588; font-weight: bold } /* Name.Class */
-.codehilite .no { color: #008080 } /* Name.Constant */
-.codehilite .nd { color: #3c5d5d; font-weight: bold } /* Name.Decorator */
-.codehilite .ni { color: #800080 } /* Name.Entity */
-.codehilite .ne { color: #990000; font-weight: bold } /* Name.Exception */
-.codehilite .nf { color: #990000; font-weight: bold } /* Name.Function */
-.codehilite .nl { color: #990000; font-weight: bold } /* Name.Label */
-.codehilite .nn { color: #555555 } /* Name.Namespace */
-.codehilite .nt { color: #000080 } /* Name.Tag */
-.codehilite .nv { color: #008080 } /* Name.Variable */
-.codehilite .ow { color: #000000; font-weight: bold } /* Operator.Word */
-.codehilite .w { color: #bbbbbb } /* Text.Whitespace */
-.codehilite .mf { color: #009999 } /* Literal.Number.Float */
-.codehilite .mh { color: #009999 } /* Literal.Number.Hex */
-.codehilite .mi { color: #009999 } /* Literal.Number.Integer */
-.codehilite .mo { color: #009999 } /* Literal.Number.Oct */
-.codehilite .sb { color: #d01040 } /* Literal.String.Backtick */
-.codehilite .sc { color: #d01040 } /* Literal.String.Char */
-.codehilite .sd { color: #d01040 } /* Literal.String.Doc */
-.codehilite .s2 { color: #d01040 } /* Literal.String.Double */
-.codehilite .se { color: #d01040 } /* Literal.String.Escape */
-.codehilite .sh { color: #d01040 } /* Literal.String.Heredoc */
-.codehilite .si { color: #d01040 } /* Literal.String.Interpol */
-.codehilite .sx { color: #d01040 } /* Literal.String.Other */
-.codehilite .sr { color: #009926 } /* Literal.String.Regex */
-.codehilite .s1 { color: #d01040 } /* Literal.String.Single */
-.codehilite .ss { color: #990073 } /* Literal.String.Symbol */
-.codehilite .bp { color: #999999 } /* Name.Builtin.Pseudo */
-.codehilite .vc { color: #008080 } /* Name.Variable.Class */
-.codehilite .vg { color: #008080 } /* Name.Variable.Global */
-.codehilite .vi { color: #008080 } /* Name.Variable.Instance */
-.codehilite .il { color: #009999 } /* Literal.Number.Integer.Long */
+.highlight .hll { background-color: #ffc; }
+.highlight .c { color: #999; } /* Comment */
+.highlight .err { color: #a00; background-color: #faa } /* Error */
+.highlight .k { color: #069; } /* Keyword */
+.highlight .o { color: #555 } /* Operator */
+.highlight .cm { color: #09f; font-style: italic } /* Comment.Multiline */
+.highlight .cp { color: #099 } /* Comment.Preproc */
+.highlight .c1 { color: #999; } /* Comment.Single */
+.highlight .cs { color: #999; } /* Comment.Special */
+.highlight .gd { background-color: #fcc; border: 1px solid #c00 } /* Generic.Deleted */
+.highlight .ge { font-style: italic } /* Generic.Emph */
+.highlight .gr { color: #f00 } /* Generic.Error */
+.highlight .gh { color: #030; } /* Generic.Heading */
+.highlight .gi { background-color: #cfc; border: 1px solid #0c0 } /* Generic.Inserted */
+.highlight .go { color: #aaa } /* Generic.Output */
+.highlight .gp { color: #009; } /* Generic.Prompt */
+.highlight .gs { } /* Generic.Strong */
+.highlight .gu { color: #030; } /* Generic.Subheading */
+.highlight .gt { color: #9c6 } /* Generic.Traceback */
+.highlight .kc { color: #069; } /* Keyword.Constant */
+.highlight .kd { color: #069; } /* Keyword.Declaration */
+.highlight .kn { color: #069; } /* Keyword.Namespace */
+.highlight .kp { color: #069 } /* Keyword.Pseudo */
+.highlight .kr { color: #069; } /* Keyword.Reserved */
+.highlight .kt { color: #078; } /* Keyword.Type */
+.highlight .m { color: #f60 } /* Literal.Number */
+.highlight .s { color: #d44950 } /* Literal.String */
+.highlight .na { color: #4f9fcf } /* Name.Attribute */
+.highlight .nb { color: #366 } /* Name.Builtin */
+.highlight .nc { color: #0a8; } /* Name.Class */
+.highlight .no { color: #360 } /* Name.Constant */
+.highlight .nd { color: #99f } /* Name.Decorator */
+.highlight .ni { color: #999; } /* Name.Entity */
+.highlight .ne { color: #c00; } /* Name.Exception */
+.highlight .nf { color: #c0f } /* Name.Function */
+.highlight .nl { color: #99f } /* Name.Label */
+.highlight .nn { color: #0cf; } /* Name.Namespace */
+.highlight .nt { color: #2f6f9f; } /* Name.Tag */
+.highlight .nv { color: #033 } /* Name.Variable */
+.highlight .ow { color: #000; } /* Operator.Word */
+.highlight .w { color: #bbb } /* Text.Whitespace */
+.highlight .mf { color: #f60 } /* Literal.Number.Float */
+.highlight .mh { color: #f60 } /* Literal.Number.Hex */
+.highlight .mi { color: #f60 } /* Literal.Number.Integer */
+.highlight .mo { color: #f60 } /* Literal.Number.Oct */
+.highlight .sb { color: #c30 } /* Literal.String.Backtick */
+.highlight .sc { color: #c30 } /* Literal.String.Char */
+.highlight .sd { color: #c30; font-style: italic } /* Literal.String.Doc */
+.highlight .s2 { color: #c30 } /* Literal.String.Double */
+.highlight .se { color: #c30; } /* Literal.String.Escape */
+.highlight .sh { color: #c30 } /* Literal.String.Heredoc */
+.highlight .si { color: #a00 } /* Literal.String.Interpol */
+.highlight .sx { color: #c30 } /* Literal.String.Other */
+.highlight .sr { color: #3aa } /* Literal.String.Regex */
+.highlight .s1 { color: #c30 } /* Literal.String.Single */
+.highlight .ss { color: #fc3 } /* Literal.String.Symbol */
+.highlight .bp { color: #366 } /* Name.Builtin.Pseudo */
+.highlight .vc { color: #033 } /* Name.Variable.Class */
+.highlight .vg { color: #033 } /* Name.Variable.Global */
+.highlight .vi { color: #033 } /* Name.Variable.Instance */
+.highlight .il { color: #f60 } /* Literal.Number.Integer.Long */
+
+.css .o,
+.css .o + .nt,
+.css .nt + .nt { color: #999; }
