* Fix broken links * Add Google Scholar Profile

--- a/css/style.css
+++ b/css/style.css
@@ -111,6 +111,10 @@ dd { margin-top: 10px;}
 	margin-bottom: 20px;
 }
 
+.vertical-align {
+    display: flex;
+    align-items: center;
+}
 
 
 /* ==========================================================================
