no image in blog

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -17,9 +17,9 @@ layout: default
         <div class="col-md-12 blog-section">
             <h2>About the Author</h2>
             <div class="media">
-                <a class="pull-left" href="#">
+                <!--<a class="pull-left" href="#">
                     <img class="img-circle dp" src="/img/me_thumbnail.jpg">
-                </a>
+                </a>-->
                 <div class="media-body">
                     <h4 class="media-heading">Uli Fahrer <small> Germany</small></h4>
                     <h5>CS Student <a href="http://www.tu-darmstadt.de">TU Darmstadt</a></h5>
