--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -17,12 +17,12 @@ layout: default
         <div class="col-md-12 blog-section">
             <h2>About the Author</h2>
             <div class="media">
-                <!--<a class="pull-left" href="#">
-                    <img class="img-circle dp" src="/img/me_thumbnail.jpg">
-                </a>-->
+                <a class="pull-left" href="https://icons8.com/icons/set/user">
+                    <img class="img-circle dp" src="/img/avatar.png">
+                </a>
                 <div class="media-body">
                     <h4 class="media-heading">Uli Fahrer <small> Germany</small></h4>
-                    <h5>CS Student <a href="http://www.tu-darmstadt.de">TU Darmstadt</a></h5>
+                    <h5>Developer</h5>
                     <hr style="margin:8px auto">
 
                     <span>Software Development, NLP, Machine Learning, Ebass </span>
@@ -31,14 +31,13 @@ layout: default
         </div>
 
 
-        <div class="col-md-12 blog-section">
+        <!--<div class="col-md-12 blog-section">
             <div class="share-page">
                 Share this on &rarr;
                 <a href="https://twitter.com/intent/tweet?text={{ page.title }}&url={{ site.url }}{{ page.url }}&via={{ site.twitter_username }}&related={{ site.twitter_username }}" rel="nofollow" target="_blank" title="Share on Twitter">Twitter</a>
                 <a href="https://facebook.com/sharer.php?u={{ site.url }}{{ page.url }}" rel="nofollow" target="_blank" title="Share on Facebook">Facebook</a>
-                <a href="https://plus.google.com/share?url={{ site.url }}{{ page.url }}" rel="nofollow" target="_blank" title="Share on Google+">Google+</a>
             </div>
-        </div>
+        </div>-->
 
         <div class="col-md-12 col-xs-12 blog-section">
             <p class="pull-right">{% if page.previous.url %} <a href="{{page.previous.url}}" title="Previous Post: {{page.previous.title}}">&laquo; Previous Article</a>  {% endif %}  |  <a href="#">Back to top</a>  |  {% if page.next.url %}  <a href="{{page.next.url}}" title="Next Post: {{page.next.title}}">Next Article &raquo; </a>  {% endif %} </p>
