--- a/_layouts/tag-page.html
+++ b/_layouts/tag-page.html
@@ -3,7 +3,7 @@ layout: blog-overview
 ---
 
 <h2>{{page.title}}</h2>
-{% for post in site.tags.[page.tag] %}
+{% for post in site.tags[page.tag] %}
     <div class="row blog-section">
         <div class="col-md-12 hidden-xs hidden-sm">
             <h3>
