fix: update broken links

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -22,10 +22,10 @@ layout: default
                 </a>
                 <div class="media-body">
                     <h4 class="media-heading">Uli Fahrer <small> Germany</small></h4>
-                    <h5>Developer</h5>
+                    <h5>Software Engineer</h5>
                     <hr style="margin:8px auto">
 
-                    <span>Software Development, NLP, Machine Learning, Ebass </span>
+                    <span>Writes about Software Development and Cyber Security</span>
                 </div>
             </div>
         </div>
