--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -5,7 +5,7 @@
 		</div>
 
 		<div class="col-md-6 col-xs-6">
-			<p class="pull-right"><small><a href="/about" title="About this site">Impressum</a></small></p>
+			<p class="pull-right"><small><a href="/about" title="About this site">Legal Notice</a></small></p>
 		</div>
 	</div>
 </div> <!-- /footer -->
