feat: update to Bootstrap 5

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,11 +1,15 @@
 <div class="site-footer">
 	<div class="row">
-		<div class="col-md-6 col-xs-6">
+		<div class="col">
 			<p><small>&copy; 2024 Uli Fahrer</small></p>
 		</div>
 
-		<div class="col-md-6 col-xs-6">
-			<p class="pull-right"><small><a href="/about" title="About this site">Legal Notice</a></small></p>
+		<div class="col">
+			<p class="pull-right">
+				<small>
+					<a href="/about" title="About this site">Legal Notice</a>
+				</small>
+			</p>
 		</div>
 	</div>
 </div> <!-- /footer -->
