--- a/_includes/head.html
+++ b/_includes/head.html
@@ -9,16 +9,15 @@
 
 	<link rel="shortcut icon" href="/img/sys-command.ico">
 
-	<!-- STYLES -->
-	<link href="/css/bootstrap.css" rel="stylesheet">
+	<!-- Styles-->
+	<link href="/css/bootstrap.min.css" rel="stylesheet">
     <link href="/css/font-awesome.css" rel="stylesheet">
     <link href="/css/syntax.css" rel="stylesheet">
 	<link href="/css/style.css" rel="stylesheet">
 
 	<!-- HTML5 shim and Respond.js IE8 support of HTML5 elements and media queries -->
 	<!--[if lt IE 9]>
-    	<script src="/js/html5shiv.min.js"></script>
-    	<script src="/js/respond.min.js"></script>
+		<script src="/js/html5shiv.min.js"></script>
+		<script src="/js/respond.min.js"></script>
 	<![endif]-->
-
 </head>
