--- a/_layouts/blog-overview.html
+++ b/_layouts/blog-overview.html
@@ -7,7 +7,7 @@ layout: default
 		<h2>Tag Cloud</h2>
 		{% include tag-cloud.html %}
     
-		<hr class="style-two">
+		<hr class="py-3"/>
     
         {{ content }}
 
