--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,12 +1,33 @@
 <div class="site-header">
-	<div class="row">
-		<div class="col-md-12">
-			<ul class="main-navigation nav nav-pills">
-				<li class="current-menu-item"><a href="/"><i class="fa fa-code"></i> Home</a></li>
-				<li class="{{ page.publications }}"><a href="/publications" title="Publications">Publications</a></li>
-				<li class="{{ page.projects }}"><a href="/projects" title="Projects">Projects</a></li>
-				<li class="{{ page.blog }}"><a href="/blog" title="Projects">Blog</a></li>
-			</ul>
-		</div>
+	<div class="row col-md-12">
+		<nav class="navbar navbar-expand-lg navbar-expand-md navbar-expand-sm navbar-light bg-light py-3">
+			<div class="container-fluid">
+				<span class="navbar-brand">
+					<i class="fa fa-code"></i>
+				</span>
+				<button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+					<span class="navbar-toggler-icon"></span>
+				</button>
+				<div class="collapse navbar-collapse" id="navbarSupportedContent">
+				<ul class="navbar-nav me-auto mb-2 mb-lg-0">
+					<li class="nav-item">
+						<a class="nav-link active" aria-current="page" href="/">Home</a>
+					</li>
+					<li class="nav-item">
+						<a class="nav-link" href="/publications/">Publications</a>
+					</li>
+					<li class="nav-item">
+						<a class="nav-link" href="/projects/">Projects</a>
+					</li>
+					<li class="nav-item">
+						<a class="nav-link" href="/blog/">Blog</a>
+					</li>
+				</ul>
+				<span class="navbar-text d-none d-lg-block">
+					DevSecOps-minded Software Engineer
+				</span>
+				</div>
+			</div>
+		</nav>
 	</div>
 </div>
