--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -1,6 +1,7 @@
 ---
 layout: default
 ---
+
 <div class="content">
     <div class="row">
         <div class="post-top-meta">
@@ -10,31 +11,47 @@ layout: default
 
         <div class="hrline"></div>
 
+        <!-- Outdated disclaimer; maybe move to own include -->
+        {% assign currentYear = site.time | date: '%Y' %}
+        {% assign postYear = page.date | date: '%Y' %}
+        {% assign postAge = currentYear | minus: postYear | minus: 1 %}
+
+        {% if postAge >= 2 %}
+            <div class="alert alert-warning col-md-12" role="alert">
+                Notice! This post is over {{ postAge }} years old. It may no longer be up to date. Opinions may have changed.
+            </div>
+        {% endif %}
+
         <div class="col-md-12">
             {{ content }}
         </div>
 
         <div class="col-md-12 blog-section">
             <h2>About the Author</h2>
-            <div class="media">
-                <a class="pull-left" href="https://icons8.com/icons/set/user">
-                    <img class="img-circle dp" src="/img/avatar.png">
-                </a>
-                <div class="media-body">
-                    <h4 class="media-heading">Uli Fahrer <small> Germany</small></h4>
-                    <h5>Software Engineer</h5>
-                    <hr style="margin:8px auto">
-
-                    <span>Writes about Software Development and Cyber Security</span>
+            <div class="card">
+                <div class="row">
+                    <div class="col-md-2 text-center">
+                        <a href="https://icons8.com/icons/set/user">
+                            <img class="img-fluid" src="/img/avatar.png">
+                        </a>
+                    </div>
+                    <div class="col-md-10">
+                        <div class="card-body">
+                            <h3 class="card-title">Uli Fahrer</h3>
+                            <h4 class="fw-italic">Software Engineer</h4>
+                            <hr/>
+                            <p class="card-text"><small class="text-body-secondary">Writes about Software Development and Cyber Security</small></p>
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
 
-        <div class="col-md-12 col-xs-12 blog-section">
+        <div class="col-md-12 col-12 blog-section">
             <p class="pull-right">{% if page.previous.url %} <a href="{{page.previous.url}}" title="Previous Post: {{page.previous.title}}">&laquo; Previous Article</a>  {% endif %}  |  <a href="#">Back to top</a>  |  {% if page.next.url %}  <a href="{{page.next.url}}" title="Next Post: {{page.next.title}}">Next Article &raquo; </a>  {% endif %} </p>
         </div>
 
-        <div class="col-md-12 col-xs-12 blog-section">
+        <div class="col-md-12 col-12 blog-section">
             <h2>Read More Recent Posts</h2>
             <ul class="list-unstyled square-mark">
                 {% for post in site.posts limit:3 %}
