--- a/_layouts/tag-page.html
+++ b/_layouts/tag-page.html
@@ -5,7 +5,7 @@ layout: blog-overview
 <h2>{{page.title}}</h2>
 {% for post in site.tags[page.tag] %}
     <div class="row blog-section">
-        <div class="col-md-12 hidden-xs hidden-sm">
+        <div class="col-md-12 d-none d-sm-block">
             <h3>
                 <strong><a href="{{ post.url }}">{{ post.title }}</a></strong>
             </h3>
@@ -25,7 +25,7 @@ layout: blog-overview
         </div>
 
 
-        <div class="col-xs-12 hidden-md hidden-lg hidden-print">
+        <div class="col-12 d-block d-sm-none d-print-none">
             <h3><strong><a href="{{ post.url }}">{{ post.title }}</a></strong></h3>
         </div>
     </div>
