feat: change site title

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -5,7 +5,7 @@
 	<meta name="description" content="{{ page.description }}">
 	<meta name="author" content="Uli Fahrer">
 
-	<title>{{ page.title }} Uli Fahrer - Developer</title>
+	<title>{{ page.title }} Uli Fahrer - DevSecOps Engineer</title>
 
 	<link rel="shortcut icon" href="/img/sys-command.ico">
 
