feat: update FontAwesome

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -11,7 +11,7 @@
 
 	<!-- Styles-->
 	<link href="/css/bootstrap.min.css" rel="stylesheet">
-    <link href="/css/font-awesome.css" rel="stylesheet">
+    <link href="/css/fontawesome.all.min.css" rel="stylesheet">
     <link href="/css/syntax.css" rel="stylesheet">
 	<link href="/css/style.css" rel="stylesheet">
 
