fix: migrate text align to Bootstrap 5

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -5,7 +5,7 @@
 		</div>
 
 		<div class="col">
-			<p class="pull-right">
+			<p class="text-end">
 				<small>
 					<a href="/about" title="About this site">Legal Notice</a>
 				</small>
