feat: make changes for small screens

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,15 +1,13 @@
-<div class="site-footer">
+<footer class="footer mt-auto py-5">
 	<div class="row">
 		<div class="col">
-			<p><small>&copy; 2024 Uli Fahrer</small></p>
+			<p class="fs-4">&copy; 2024 Uli Fahrer</p>
 		</div>
 
 		<div class="col">
-			<p class="text-end">
-				<small>
-					<a href="/about" title="About this site">Legal Notice</a>
-				</small>
+			<p class="text-end fs-4">
+				<a href="/about" title="About this site">Legal Notice</a>
 			</p>
 		</div>
 	</div>
-</div> <!-- /footer -->
+</footer>
