--- a/_layouts/blog-overview.html
+++ b/_layouts/blog-overview.html
@@ -11,6 +11,6 @@ layout: default
     
         {{ content }}
 
-		<p class="text-end">| <a href="#">Back to top</a> |</p>
+		<p class="text-end fs-3">| <a href="#">Back to top</a> |</p>
 	</div>  
 </div><!-- /.blog-overview -->
