--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,6 +1,6 @@
 <div class="site-header">
 	<div class="row col-md-12">
-		<nav class="navbar navbar-expand-lg navbar-expand-md navbar-expand-sm navbar-light bg-light py-3">
+		<nav class="navbar navbar-expand-lg navbar-expand-md navbar-expand-sm navbar-expand navbar-light bg-light py-3">
 			<div class="container-fluid">
 				<span class="navbar-brand">
 					<i class="fa fa-code"></i>
