--- a/css/style.css
+++ b/css/style.css
@@ -98,7 +98,6 @@ h4, h5, h6 {
 
 p { margin: 0.7em 0; }
 
-
 .dropcap:first-letter {
 	float: left;
 	color: #3276b1;
@@ -122,17 +121,7 @@ span.site-tag a {
 	}
 }
 
-@media screen and (max-width: 630px) {
-	.avatar {
-		width: 100px;
-		height: 100px;
-	}
-	.about-quote {
-		font-size: 0.8em !important;
-	}
-}
-
-dt { margin-top: 30px; margin-bottom: 0px;}
+tt { margin-top: 30px; margin-bottom: 0px;}
 dd { margin-top: 10px;}
 
 /* HEADER */
@@ -144,11 +133,6 @@ dd { margin-top: 10px;}
 
 /* FOOTER */
 footer > .row { border-top: 1px solid #eee; }
-
-.vertical-align {
-    display: flex;
-    align-items: center;
-}
 
 /* ==========================================================================
 	2. Blog
