fix(blog): improve author box on mobile

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -29,13 +29,13 @@ layout: default
         <div class="col-md-12 blog-section">
             <h2>About the Author</h2>
             <div class="card">
-                <div class="row">
-                    <div class="col-md-2 text-center">
+                <div class="row align-items-center g-3">
+                    <div class="col-auto">
                         <a href="https://icons8.com/icons/set/user">
-                            <img class="img-fluid" src="/img/avatar.png">
+                            <img src="/img/avatar.png" width="100" class="img-fluid">
                         </a>
                     </div>
-                    <div class="col-md-10">
+                    <div class="col">
                         <div class="card-body">
                             <h3 class="card-title">Uli Fahrer</h3>
                             <h4 class="fw-italic">Software Engineer</h4>
